referal error solved

--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -3,7 +3,7 @@
   <!-- Mirrored from wp.alithemes.com/html/evara/evara-backend/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:32:35 GMT -->
   <head>
     <meta charset="utf-8" />
-    <title>Evara Dashboard</title>
+    <title> veeLap</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -298,6 +298,7 @@
                   <tr>
                     <th>User Name</th>
                     <th>Email</th>
+                    <th>ReferralCode</th>
                     <th class="text-center">Phone Number</th>
                     <th class="text-center">Current Status</th>
                   </tr>
@@ -307,6 +308,7 @@
                   <tr>
                     <td><%= e.userName %></td>
                     <td><%= e.email %></td>
+                    <td><%= e.ReferralCode%></td>
                     <td class="text-center"><%= e.phoneNumber %></td>
                     <td class="text-center">
                       <a
