--- a/views/user/referalCode.ejs
+++ b/views/user/referalCode.ejs
@@ -38,13 +38,13 @@
         <button id="submitReferral" type="button" class="btn btn-primary mt-3">Submit</button>
         <a href="/user/referalCode" class="btn btn-link mt-2">Skip</a>
     </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
 
     <script>
     document.addEventListener("DOMContentLoaded",function(){
       var emailId = document.getElementById('divValue').getAttribute('email_id');
-      console.log(emailId,"this is the email of the user");
+      // console.log(emailId,"this is the email of the user");
       const ReferralBtn = document.getElementById("submitReferral")
       ReferralBtn.addEventListener("click", async function () {
         const referralCodeInputs = document.getElementById("referralCode").value
