--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -141,7 +141,7 @@
           </li>
         </ul>
         <hr />
-        <ul class="menu-aside">
+        <!-- <ul class="menu-aside">
           <li class="menu-item has-submenu">
             <a class="menu-link" href="#">
               <i class="icon material-icons md-settings"></i>
@@ -158,7 +158,7 @@
               <span class="text"> Starter page </span>
             </a>
           </li>
-        </ul>
+        </ul> -->
         <br />
         <br />
       </nav>
@@ -194,12 +194,12 @@
             <i class="material-icons md-apps"></i>
           </button>
           <ul class="nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link btn-icon" href="#">
                 <i class="material-icons md-notifications animation-shake"></i>
                 <span class="badge rounded-pill">3</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link btn-icon darkmode" href="#">
                 <i class="material-icons md-nights_stay"></i>
@@ -207,25 +207,21 @@
             </li>
             <li class="dropdown nav-item">
               <a
-                class="dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href="#"
-                id="dropdownAccount"
-                aria-expanded="false"
+                  class="dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  href="#"
+                  id="dropdownAccount"
+                  aria-expanded="false"
               >
-                <img
-                  class="img-xs rounded-circle"
-                  src="/adminassets/imgs/people/avatar2.jpg"
-                  alt="User"
-              /></a>
+                  <i class="material-icons md-settings"></i>  </a>
               <div
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="dropdownAccount"
+                  class="dropdown-menu dropdown-menu-end"
+                  aria-labelledby="dropdownAccount"
               >
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-danger" href="/admin/logout"
-                  ><i class="material-icons md-exit_to_app"></i>Logout</a
-                >
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-danger" href="/admin/logout">
+                      <i class="material-icons md-exit_to_app"></i>Logout
+                  </a>
               </div>
             </li>
           </ul>
@@ -608,7 +604,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <%orders.reverse().forEach((element)=>{%>
+                    <%orders.forEach((element)=>{%>
                       <td><a href="#" class="fw-bold"><%=element.referenceId%></a></td>
                       <td><%=element.userId.userName%></td>
                       <td><%=element.orderDate.toLocaleString()%></td>
@@ -660,19 +656,7 @@
         </div> -->
       </section>
       <!-- content-main end// -->
-      <footer class="main-footer font-xs">
-        <div class="row pb-30 pt-15">
-          <div class="col-sm-6">
-            <script>
-              document.write(new Date().getFullYear());
-            </script>
-            ©, Evara - HTML Ecommerce Template .
-          </div>
-          <div class="col-sm-6">
-            <div class="text-sm-end">All rights reserved</div>
-          </div>
-        </div>
-      </footer>
+      
     </main>
     <script src="/adminassets/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="/adminassets/js/vendors/bootstrap.bundle.min.js"></script>
