--- a/views/admin/editOffer.ejs
+++ b/views/admin/editOffer.ejs
@@ -85,24 +85,7 @@
           </li>
         </ul>
         <hr />
-        <ul class="menu-aside">
-          <li class="menu-item has-submenu">
-            <a class="menu-link" href="#">
-              <i class="icon material-icons md-settings"></i>
-              <span class="text">Settings</span>
-            </a>
-            <div class="submenu">
-              <a href="page-settings-1.html">Setting sample 1</a>
-              <a href="page-settings-2.html">Setting sample 2</a>
-            </div>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="page-blank.html">
-              <i class="icon material-icons md-local_offer"></i>
-              <span class="text"> Starter page </span>
-            </a>
-          </li>
-        </ul>
+        
         <br />
         <br />
       </nav>
@@ -138,12 +121,7 @@
             <i class="material-icons md-apps"></i>
           </button>
           <ul class="nav">
-            <li class="nav-item">
-              <a class="nav-link btn-icon" href="#">
-                <i class="material-icons md-notifications animation-shake"></i>
-                <span class="badge rounded-pill">3</span>
-              </a>
-            </li>
+            
             <li class="nav-item">
               <a class="nav-link btn-icon darkmode" href="#">
                 <i class="material-icons md-nights_stay"></i>
@@ -151,25 +129,21 @@
             </li>
             <li class="dropdown nav-item">
               <a
-                class="dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href="#"
-                id="dropdownAccount"
-                aria-expanded="false"
+                  class="dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  href="#"
+                  id="dropdownAccount"
+                  aria-expanded="false"
               >
-                <img
-                  class="img-xs rounded-circle"
-                  src="/adminassets/imgs/people/avatar2.jpg"
-                  alt="User"
-              /></a>
+                  <i class="material-icons md-settings"></i>  </a>
               <div
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="dropdownAccount"
+                  class="dropdown-menu dropdown-menu-end"
+                  aria-labelledby="dropdownAccount"
               >
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-danger" href="/admin/logout"
-                  ><i class="material-icons md-exit_to_app"></i>Logout</a
-                >
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-danger" href="/admin/logout">
+                      <i class="material-icons md-exit_to_app"></i>Logout
+                  </a>
               </div>
             </li>
           </ul>
@@ -281,20 +255,6 @@
             
         </div>
     </section> 
-        <footer class="main-footer font-xs">
-            <div class="row pb-30 pt-15">
-                <div class="col-sm-6">
-                    <script>
-                    document.write(new Date().getFullYear())
-                    </script> ©, Evara - HTML Ecommerce Template .
-                </div>
-                <div class="col-sm-6">
-                    <div class="text-sm-end">
-                        All rights reserved
-                    </div>
-                </div>
-            </div>
-        </footer>
     </main>
 
     <!-- <script>
