--- a/views/admin/editcategory.ejs
+++ b/views/admin/editcategory.ejs
@@ -147,24 +147,6 @@
           </li> -->
         </ul>
         <hr />
-        <ul class="menu-aside">
-          <li class="menu-item has-submenu">
-            <a class="menu-link" href="#">
-              <i class="icon material-icons md-settings"></i>
-              <span class="text">Settings</span>
-            </a>
-            <div class="submenu">
-              <a href="page-settings-1.html">Setting sample 1</a>
-              <a href="page-settings-2.html">Setting sample 2</a>
-            </div>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="page-blank.html">
-              <i class="icon material-icons md-local_offer"></i>
-              <span class="text"> Starter page </span>
-            </a>
-          </li>
-        </ul>
         <br />
         <br />
       </nav>
@@ -201,54 +183,27 @@
           </button>
           <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link btn-icon" href="#">
-                <i class="material-icons md-notifications animation-shake"></i>
-                <span class="badge rounded-pill">3</span>
-              </a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link btn-icon darkmode" href="#">
                 <i class="material-icons md-nights_stay"></i>
               </a>
             </li>
             <li class="dropdown nav-item">
               <a
-                class="dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href="#"
-                id="dropdownAccount"
-                aria-expanded="false"
+                  class="dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  href="#"
+                  id="dropdownAccount"
+                  aria-expanded="false"
               >
-                <img
-                  class="img-xs rounded-circle"
-                  src="/adminassets/imgs/people/avatar2.jpg"
-                  alt="User"
-              /></a>
+                  <i class="material-icons md-settings"></i>  </a>
               <div
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="dropdownAccount"
+                  class="dropdown-menu dropdown-menu-end"
+                  aria-labelledby="dropdownAccount"
               >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-perm_identity"></i>Edit
-                  Profile</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-settings"></i>Account Settings</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-account_balance_wallet"></i
-                  >Wallet</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-receipt"></i>Billing</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-help_outline"></i>Help center</a
-                >
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-danger" href="#"
-                  ><i class="material-icons md-exit_to_app"></i>Logout</a
-                >
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-danger" href="/admin/logout">
+                      <i class="material-icons md-exit_to_app"></i>Logout
+                  </a>
               </div>
             </li>
           </ul>
@@ -278,19 +233,7 @@
         </div>
     </section>
     
-      <footer class="main-footer font-xs">
-        <div class="row pb-30 pt-15">
-          <div class="col-sm-6">
-            <script>
-              document.write(new Date().getFullYear());
-            </script>
-            ©, Evara - HTML Ecommerce Template .
-          </div>
-          <div class="col-sm-6">
-            <div class="text-sm-end">All rights reserved</div>
-          </div>
-        </div>
-      </footer>
+      
       <script>
 document.addEventListener("DOMContentLoaded", () => {
     const submitBtn = document.getElementById("submitBtn");
