--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -147,7 +147,7 @@
           </li> -->
         </ul>
         <hr />
-        <ul class="menu-aside">
+        <!-- <ul class="menu-aside">
           <li class="menu-item has-submenu">
             <a class="menu-link" href="#">
               <i class="icon material-icons md-settings"></i>
@@ -164,7 +164,7 @@
               <span class="text"> Starter page </span>
             </a>
           </li>
-        </ul>
+        </ul> -->
         <br />
         <br />
       </nav>
@@ -200,12 +200,12 @@
             <i class="material-icons md-apps"></i>
           </button>
           <ul class="nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link btn-icon" href="#">
                 <i class="material-icons md-notifications animation-shake"></i>
                 <span class="badge rounded-pill">3</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link btn-icon darkmode" href="#">
                 <i class="material-icons md-nights_stay"></i>
@@ -213,44 +213,25 @@
             </li>
             <li class="dropdown nav-item">
               <a
-                class="dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href="#"
-                id="dropdownAccount"
-                aria-expanded="false"
+                  class="dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  href="#"
+                  id="dropdownAccount"
+                  aria-expanded="false"
               >
-                <img
-                  class="img-xs rounded-circle"
-                  src="/adminassets/imgs/people/avatar2.jpg"
-                  alt="User"
-              /></a>
+                  <i class="material-icons md-settings"></i>
+              </a>
               <div
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="dropdownAccount"
+                  class="dropdown-menu dropdown-menu-end"
+                  aria-labelledby="dropdownAccount"
               >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-perm_identity"></i>Edit
-                  Profile</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-settings"></i>Account Settings</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-account_balance_wallet"></i
-                  >Wallet</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-receipt"></i>Billing</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-help_outline"></i>Help center</a
-                >
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-danger" href="#"
-                  ><i class="material-icons md-exit_to_app"></i>Logout</a
-                >
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-danger" href="/admin/logout">
+                      <i class="material-icons md-exit_to_app"></i>Logout
+                  </a>
               </div>
             </li>
+            
           </ul>
         </div>
       </header>
@@ -350,29 +331,13 @@
         </div> -->
       </section>
       <!-- content-main end// -->
-      <footer class="main-footer font-xs">
-        <div class="row pb-30 pt-15">
-          <div class="col-sm-6">
-            <script
-              data-cfasync="false"
-              src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
-            ></script>
-            <script>
-              document.write(new Date().getFullYear());
-            </script>
-            ©, Evara - HTML Ecommerce Template .
-          </div>
-          <div class="col-sm-6">
-            <div class="text-sm-end">All rights reserved</div>
-          </div>
-        </div>
-      </footer>
     </main>
     <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="assets/js/vendors/bootstrap.bundle.min.js"></script>
     <script src="assets/js/vendors/select2.min.js"></script>
     <script src="assets/js/vendors/perfect-scrollbar.js"></script>
     <script src="assets/js/vendors/jquery.fullscreen.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Main Script -->
     <script src="assets/js/main.js" type="text/javascript"></script>
   </body>
