--- a/views/user/partials/footer.ejs
+++ b/views/user/partials/footer.ejs
@@ -150,14 +150,12 @@
         </div>
         <div class="col-lg-6">
           <p class="float-md-left font-sm text-muted mb-0">
-            &copy; 2021, <strong class="text-brand">Evara</strong> - HTML
-            Ecommerce Template
+            &copy; 2023, <strong class="text-brand">VeeLap</strong>
+            Ecommerce
           </p>
         </div>
         <div class="col-lg-6">
           <p class="text-lg-end text-start font-sm text-muted mb-0">
-            Designed by
-            <a href="http://alithemes.com/" target="_blank">Alithemes.com</a>.
             All rights reserved
           </p>
         </div>
